# UrfuLab

./: CMakeLists.txt  Dockerfile  README.md
client/: Tcp Client.py
logger/: CMakeLists.txt  boost_logger.cpp  boost_logger.h
monitor/: CMakeLists.txt  base_interface.cpp  base_interface.h  main.cpp  monitor.h
server/: Tcp Server.py
task_algo/: tasks.py
